<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>emanondev.core</groupId>
	<artifactId>DeepCore</artifactId>
	<version>3.1</version>
	<packaging>jar</packaging>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<build>
		<finalName>${project.name}-${project.version}</finalName>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>17</source>
					<target>17</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.3.1-SNAPSHOT</version> <!-- (https://maven.apache.org/plugins/maven-shade-plugin/) -->
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<minimizeJar>true</minimizeJar>
							<createDependencyReducedPom>false</createDependencyReducedPom>
							<relocations>
								<relocation>
									<pattern>io.papermc.lib</pattern>
									<shadedPattern>emanondev.shade.paperlib</shadedPattern>
								</relocation>
							</relocations>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<pluginRepositories>
		<pluginRepository>
			<id>apache.snapshots</id>
			<url>https://repository.apache.org/snapshots/</url>
		</pluginRepository>
	</pluginRepositories>

	<repositories>
		<repository>
			<id>spigot-repo</id>
			<url>https://hub.spigotmc.org/nexus/content/repositories/public/</url>
		</repository>
		<repository>
			<id>papermc</id>
			<url>https://papermc.io/repo/repository/maven-public/</url>
		</repository>
		<repository>
			<id>jitpack.io</id>
			<url>https://jitpack.io</url>
		</repository>
		<!-- CodeMC repository -->
		<repository>
			<id>CodeMC</id>
			<url>https://repo.codemc.io/repository/maven-public/</url>
		</repository>
		<!-- ProtocolLib repo -->
		<repository>
			<id>dmulloy2-repo</id>
			<url>https://repo.dmulloy2.net/nexus/repository/public/</url>
		</repository>
		<!-- PlaceholderAPI repo -->
		<repository>
			<id>placeholderapi</id>
			<url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
		</repository>
		<!-- WorldEdit repo -->
		<repository>
			<id>enginehub-maven</id>
			<url>https://maven.enginehub.org/repo/</url>
		</repository>
	</repositories>
	<dependencies>
		<!-- PaperLib -->
		<dependency>
			<groupId>io.papermc</groupId>
			<artifactId>paperlib</artifactId>
			<version>1.0.7</version>
			<scope>compile</scope>
		</dependency>
		<!-- Spigot -->
		<dependency>
			<groupId>org.spigotmc</groupId>
			<artifactId>spigot-api</artifactId>
			<version>1.18.1-R0.1-SNAPSHOT</version>
			<type>jar</type>
			<scope>provided</scope>
		</dependency>
		<!-- SuperVanish -->
		<dependency>
			<groupId>com.github.LeonMangler</groupId>
			<artifactId>SuperVanish</artifactId>
			<version>6.2.6-2</version>
			<scope>provided</scope>
		</dependency>
		<!-- JetBrains Annotations -->
		<dependency>
			<groupId>org.jetbrains</groupId>
			<artifactId>annotations</artifactId>
			<version>22.0.0</version>
			<scope>provided</scope>
		</dependency>
		<!-- Vault -->
		<dependency>
			<groupId>com.github.MilkBowl</groupId>
			<artifactId>VaultAPI</artifactId>
			<version>1.7</version>
			<scope>provided</scope>
			<exclusions>
				<exclusion>
					<groupId>org.bukkit</groupId>
					<artifactId>bukkit</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<!-- ProtocolLib -->
		<dependency>
			<groupId>com.comphenix.protocol</groupId>
			<artifactId>ProtocolLib</artifactId>
			<version>4.6.0-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency>
		<!-- PlaceHolderAPI -->
		<dependency>
			<groupId>me.clip</groupId>
			<artifactId>placeholderapi</artifactId>
			<version>2.10.9</version>
			<scope>provided</scope>
		</dependency>
		<!-- Towny -->
		<dependency>
			<groupId>com.github.TownyAdvanced</groupId>
			<artifactId>Towny</artifactId>
			<version>0.97.2.0</version>
			<scope>provided</scope>
		</dependency>
		<!-- VirginBlock -->
		<dependency>
			<groupId>emanondev.virginblock</groupId>
			<artifactId>VirginBlock</artifactId>
			<version>2.0</version>
			<scope>provided</scope>
		</dependency>
		<!-- This depends on the Bukkit API, Use this if you need BukkitAdapter -->
		<dependency>
			<groupId>com.sk89q.worldedit</groupId>
			<artifactId>worldedit-bukkit</artifactId>
			<version>7.2.0-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency>
	</dependencies>
</project>